--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -7,6 +7,11 @@
 	border-style: none;
 }
 
+.menu-button span button {
+	width: 100%;
+	height: 100%;
+}
+
 .text-field {
 	position: relative;
 	width: 200px;
