--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -53,6 +53,10 @@ table, tr, td {
 	font-size: 18px;
 }
 
+.text-field-value:focus {
+	outline: 0;
+}
+
 .full-text-field-label {
 	overflow: hidden;
 	border-style: none;
@@ -67,10 +71,11 @@ table, tr, td {
 
 .section-header {
     padding: 0.5em 1em 0.3em;
-    display: block;
+    display: block;                       vv           vvvvvvvvvvvvvvvvvvvvvvv v   v v c4
     border-radius: 3px;
     border: 1px solid #A8A8A8;
-    background: #C4C4C4 -moz-linear-gradient(center top , rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0)) repeat scroll 0% 0%;
+    background: #C4C4C4 -moz-linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
+    background: #C4C4C4 -webkit-linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
     color: #333;
     font-weight: bold;
     text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
@@ -107,7 +112,9 @@ table, tr, td {
 }
 
 .drop-down-menu-button {
+	font-size: 18px;
 	cursor: pointer;
+	font-family: Arial,sans-serif;
 }
 
 .drop-down-menu-button:hover {
