--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -71,7 +71,7 @@ table, tr, td {
 
 .section-header {
     padding: 0.5em 1em 0.3em;
-    display: block;                       vv           vvvvvvvvvvvvvvvvvvvvvvv v   v v c4
+    display: block;
     border-radius: 3px;
     border: 1px solid #A8A8A8;
     background: #C4C4C4 -moz-linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
