Added AO to the new web page.  Made the new web page default.

--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -22,6 +22,10 @@ table, tr, td {
 	border-style: none;
 }
 
+.value-table {
+	margin: 5px;
+}
+
 .menu-button span button {
 	width: 100%;
 	height: 100%;
