--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -13,13 +13,28 @@ table, tr, td {
     padding: 0;
 }
 
-.ui-widget-content {
-	border-style: none;
+.pointsContainer {
+	text-align: center;
+	display: inline-block;
 }
 
-.ui-panelgrid .ui-panelgrid-cell {
-	padding: 0px;
-	border-style: none;
+.right-aligned {
+	text-align: right;
+}
+
+#main-menu {
+	font-size: 0.8em;
+	font-weight: bold;
+	
+	outline 0;
+	border: none;
+	overflow: hidden;
+	background: #C4C4C4;
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
+	background: linear-gradient(to bottom, #E4E4E4 0%, #E4E4E4 33%, #A4A4A4 100%);
+	border-radius: 0.25em;
+	display: block;
+	position: fixed;
 }
 
 .value-table {
@@ -69,10 +84,6 @@ table, tr, td {
 	text-align: right;
 }
 
-.zero-padding {
-	font-size: 0px;
-}
-
 .section-header {
     padding: 0.5em 1em 0.3em;
     display: block;
@@ -116,7 +127,7 @@ table, tr, td {
 }
 
 .drop-down-menu-button {
-	font-size: 18px;
+	padding: 0.5em;
 	cursor: pointer;
 	font-family: Arial,sans-serif;
 }
