--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/buttons.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/buttons.css
@@ -12,8 +12,8 @@
     text-shadow: 1px 1px 0px rgba(255,255,255,.5);
     box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
     
-	width: 50px;
-	height: 40px;
+	width: 3.5em;
+	height: 2.5em;
 	outline: none;
 	overflow: hidden;
 	border: 1px solid #7777FF;
