--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/css/general.css
@@ -47,7 +47,7 @@ div.site-selection-name {
 }
 
 #main-menu {
-	font-size: 0.8em;
+	font-size: 1.0em;
 	font-weight: bold;
 	
 	outline 0;
@@ -111,10 +111,10 @@ div.site-selection-name {
 
 .text-field {
 	position: relative;
-	width: 200px;
-	height: 40px;
+	width: 5em;
+	height: 2.5em;
 	overflow: hidden;
-	border-radius: 3px;
+	border-radius: 0.25em;
 	border: 1px solid #7777FF;
 	background-color: #FFFFFF;
 	-webkit-user-select: none;
@@ -126,13 +126,13 @@ div.site-selection-name {
 .text-field-value {
 	position: absolute;
 	display: inline-block;
-	bottom: 7px;
+	bottom: 0.4em;
 	right: 0px;
 	color: #7777FF;
 	font-weight: bold;
 	font-family: Aerial;
 	text-align: right;
-	font-size: 18px;
+	font-size: 1.2em;
 }
 
 .text-field-value:focus {
@@ -142,15 +142,15 @@ div.site-selection-name {
 .full-text-field-label {
 	overflow: hidden;
 	border-style: none;
-	font-size: 18px;
-	padding-right: 10px;
+	font-size: 1.2em;
+	padding-right: 0.5em;
 	text-align: right;
 }
 
 .section-header {
     padding: 0.5em 1em 0.3em;
     display: block;
-    border-radius: 3px;
+    border-radius: 0.25em;
     border: 1px solid #A8A8A8;
     background: #C4C4C4 -moz-linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
     background: #C4C4C4 -webkit-linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
@@ -167,12 +167,12 @@ div.site-selection-name {
 }
 
 .full-text-field-value {
-	width: 200px;
-	height: 40px;
+	width: 10em;
+	height: 2.1em;
 	overflow: hidden;
 	
 	border: 1px solid #7777FF;
-	border-radius: 3px;
+	border-radius: 0.25em;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -186,7 +186,7 @@ div.site-selection-name {
 	font-family: Aerial;
 	background-color: #FFFFFF;
 	text-align: right;
-	font-size: 18px;
+	font-size: 1.2em;
 }
 
 .drop-down-menu-button {
